--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,931 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+header {
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 10;
+    position: sticky;
+    --tw-bg-opacity: 1;
+    background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.logo1 {
+    display: flex;
+    align-items: center;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (max-width:640px) {
+    .logo1 {
+        display: flex;
+    }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@media (max-width:768px) {
+    .logo1 {
+        margin-left: 1rem
+    }
+}
+
+@media (max-width:1138px) {
+    .logo1 {
+        margin-right: 1rem
+    }
+}
+
+
+nav ul {
+    list-style: none;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    align-items: center;
+    display: flex;
+
+}
+
+nav ul li {
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+
+.nav-1 a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    transition: background-color 0.3s;
+}
+
+.nav-1 li a.active {
+    background-color: #f97316;
+    border-radius: 2rem
+}
+
+@media (max-width: 640px) {
+    .nav-1 {
+        display: none;
+
+    }
+}
+
+@media (max-width: 768px) {
+    .nav-1 {
+        display: none;
+        
+    }
+}
+
+.btn {
+    color: #ffffff;
+    font-size: 1rem;
+    margin-right: 1rem;
+}
+
+@media (min-width: 768px) {
+    .btn {
+        display: none;
+    }
+}
+
+.img {
+    position: absolute;
+    left: 1rem;
+    top: 0.25rem;
+    margin-left: 5px;
+}
+
+ .content {
+    color: #ffffff;
+    flex-direction: column;
+    display: flex;
+    padding-top: 1rem;
+    border: none;
+    cursor: pointer;
+    margin-left: 5px;
+}
+.content .content:hover{
+    text-decoration: underline;
+    text-decoration-color: #f97316;
+}
+
+@media (max-width:640px) {
+    .content {
+        width: 14rem;
+    }
+}
+
+/* home */
+main {
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.heading {
+    align-items: center;
+    text-align: center;
+}
+
+main .heading h4 {
+    color: #27272a;
+    margin-top: 2.5rem;
+    font-size: 0.875rem;
+}
+
+main .heading h1 {
+    color: #27272a;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 1.25rem;
+}
+
+@media (min-width: 768px) {
+    .heading h1 {
+        font-size: 3rem;
+        line-height: 2.5rem;
+    }
+}
+
+.heading h1 span {
+    color: #f97316;
+}
+
+main .hero {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    align-items: center;
+}
+
+@media (min-width: 640px) {
+    main .hero {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+@media (min-width: 768px) {
+    main .hero {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+}
+
+main .hero .quote {
+    margin-bottom: 1.25rem;
+    margin-left: 1.25rem;
+    color: #27272a;
+    font-weight: 700;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    text-align: left;
+
+}
+
+@media (min-width: 640px) {
+    main .hero .quote {
+        margin-left: 20%;
+    }
+}
+
+main .hero p.text {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 400;
+    margin-top: 0.5rem;
+    color: #27272a;
+}
+
+@media (min-width: 640px) {
+    main .hero p.text {
+        font-size: 0.75rem
+            /* 12px */
+        ;
+        line-height: 1rem
+            /* 16px */
+        ;
+    }
+}
+
+main .hero .icon {
+    color: #27272a;
+    display: flex;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-top: .3rem;
+    gap: 5px;
+}
+
+main .hero .icon:hover {
+    color: #f97316;
+    transition: all at ease 0.5s;
+}
+
+main .hero .image-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main .hero .image-container Image {
+    width: 16rem;
+    margin-left: 2.5rem;
+}
+
+@media (min-width: 640px) {
+    main .hero .image-container Image {
+        width: 16rem
+            /* 256px */
+        ;
+    }
+}
+
+@media (min-width: 768px) {
+    main .hero .image-container Image {
+        width: 20rem
+            /* 320px */
+        ;
+    }
+}
+
+main .hero ul {
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 500;
+    color: #f8fafc;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 9999px;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    border: 1px solid white;
+    top: 80%;
+    left: 50%;
+    display: flex;
+    justify-content: space-between;
+    width: 10rem;
+    margin-left: 1.25rem;
+}
+
+main .hero ul li {
+    flex: 1;
+    text-align: center;
+    color: white;
+    /* Default text color */
+}
+
+main .hero ul li.nav-item.active {
+    background-color: #F97316;
+    color: white;
+    border-radius: 9999px;
+    padding: 0.25rem;
+    margin-left: 0.5rem;
+    text-align: center;
+}
+
+.nav-item {
+    flex: 1;
+    text-align: center;
+    color: white;
+}
+
+
+@media (min-width: 768px) {
+    main .hero .container .card {
+        margin-right: 8rem;
+    }
+}
+
+@media (min-width: 640px) {
+    main .hero .container .card {
+        margin-left: 20rem;
+    }
+}
+
+main .hero .container {
+    text-align: center;
+    color: white;
+    margin: 0 1rem;
+    padding: 0.5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main .hero .card {
+    background-color: #27272a;
+    padding: 1.50rem 1.25rem;
+    border-radius: 9999px;
+    margin-top: 3rem;
+
+}
+
+main .hero .stars {
+    display: flex;
+    color: #F97316;
+    font-size: 0.75rem;
+}
+
+main .hero p.title {
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1;
+    margin-top: .5rem;
+    color: white;
+}
+
+main .hero p {
+    font-size: 10px;
+    line-height: 2;
+    color: #f8fafc;
+}
+
+/* abot page */
+section {
+    background-color: #f3f4f6;
+    border-radius: 0.75rem;
+}
+
+section h1.main-heading {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    color: #F97316;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 2.5rem;
+}
+
+section h1 span {
+    color: #27272a;
+}
+
+section p.text {
+    font-size: 10px;
+    font-weight: 400;
+    color: #27272a;
+    text-align: center;
+}
+
+section .section-2 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    align-items: center;
+}
+
+@media (min-width: 640px) {
+    section .section-2 {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
+}
+
+@media (min-width: 768px) {
+    section .section-2 {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
+}
+
+section .left {
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
+}
+
+section h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: #27272a;
+    font-weight: 700;
+
+
+}
+
+section h2 span {
+    color: #F97316;
+
+}
+
+section p {
+    font-size: 10px;
+    font-weight: 400;
+    color: #334155;
+
+}
+
+section .project {
+    display: flex;
+    margin-top: 0.75rem;
+    gap: 2.5rem;
+    font-size: 10px;
+    
+}
+
+@media (min-width: 640px) {
+    section .project {
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 768px) {
+    section .project {
+        justify-content: space-between;
+    }
+}
+
+section b {
+    font-size: 14px;
+    
+}
+
+section .btn-2 {
+    color: #27272a;
+    border-width: 2px;
+    border-color: #f97316;
+    border-radius: 0.75rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-top: 0.75rem;
+    font-size: 12px;
+    margin-bottom: 1.25rem;
+}
+
+section .btn-2:hover {
+    border: none;
+    background: #f97316;
+    color: #f8fafc;
+}
+
+.sub-heading {
+    color: #f8fafc;
+    font-size: 2rem;
+}
+
+.sub-heading span {
+    color: #f97316;
+}
+
+.description {
+    font-size: 12px;
+    color: #d4d4d4;
+}
+
+form.form-1 {
+    margin-top: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+form input {
+    font-size: 1rem;
+    width: 100%;
+    background-color: transparent;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #f97316;
+    color: #ffffff;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+form input::placeholder {
+    color: #f97316;
+}
+
+form textarea {
+    width: 100%;
+    background-color: transparent;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #f97316;
+    color: #f3f4f6;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+form textarea::placeholder {
+    color: #f97316;
+}
+
+form button {
+    border-width: 1px;
+    border-color: #f97316;
+    color: #f3f4f6;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    border-radius: 0.75rem;
+    transition-duration: 0.5s;
+}
+
+form button:hover {
+    background: #f97316;
+    color: white;
+}
+
+/* contact page */
+section.background-img {
+    border-radius: none;
+    position: relative;
+    width: 100%;
+    height: 120vh;
+    overflow: hidden;
+}
+
+section .heading-h1 {
+    position: absolute;
+    inset: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+section h1.text-heading {
+    font-size: 3rem;
+    line-height: 1;
+    font-weight: 700;
+    color: #F97316;
+    margin-bottom: 1.25rem;
+
+}
+
+section h1.text-heading span {
+    color: white;
+}
+
+form.form {
+    width: 25rem;
+    height: 30rem;
+    background-color: rgb(0, 0, 0, 0.6);
+
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+}
+
+form h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    color: #f8fafc;
+    margin-bottom: 1rem;
+    margin-top: 1.25rem;
+
+}
+
+form h2 span {
+    color: #F97316;
+}
+
+form input.input-1 {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    width: 100%;
+    height: 2.25rem;
+    background: transparent;
+    border-bottom-width: 1px;
+    border-style: dashed;
+    border-color: #f97316;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+form input.input-1::placeholder {
+    color: #f97316;
+}
+
+form textarea.textarea-1 {
+    width: 100%;
+    height: 2.25rem;
+    background: transparent;
+    border-bottom-width: 1px;
+    border-style: dashed;
+    border-color: #f97316;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+form textarea.textarea-1::placeholder {
+    color: #f97316;
+}
+
+form button.buttn {
+    border-width: 1px;
+    border-color: #f97316;
+    color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-left: 4.5rem;
+    margin-right: 4.5rem;
+    border-radius: 0.75rem;
+    transition-duration: 0.5s;
+}
+
+form button.buttn:hover {
+    background: #f97316;
+}
+
+section.map {
+    background: transparent;
+    align-items: center;
+
+}
+
+section h3.map-heading {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    color: #27272a;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+section h3.map-heading span {
+    color: #F97316;
+
+}
+
+section iframe {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 2.5rem;
+
+}
+
+@media (min-width: 640px) {
+    iframe {
+        width: 600px;
+        height: 450px;
+    }
+}
+
+@media (min-width: 768px) {
+    iframe {
+        width: 700px;
+        height: 450px;
+    }
+}
+
+/* footer */
+
+footer {
+    background: #27272a;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer .image {
+    margin-left: 4rem;
+    padding-top: 1.25rem;
+}
+
+footer .footer-heading {
+    color: #f8fafc;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    border-bottom-width: 1px;
+    border-bottom-color: #9ca3af;
+    --tw-border-spacing-y: 3rem;
+    border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
+@media (min-width: 768px) {
+    footer .footer-heading {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+footer h1.heading {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    margin-right: 10rem;
+
+}
+@media (min-width: 640px) {
+    footer h1.heading {
+        text-align: left;
+        
+    }
+}
+
+footer p.paragraph {
+    line-height: 1.25;
+    font-size: 10px;
+    margin-top: 0.5rem;
+
+}
+
+@media (min-width: 768px) {
+    footer p.paragraph {
+        text-align: left;
+    }
+}
+ .i{
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-bottom: 1.25rem;
+}
+footer .i .i-icon:hover{
+    color: #F97316;
+    transition-duration: 0.5s ease;
+}
+footer .btn-1{
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    background: #F97316;
+    border-radius: 9999px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    display: flex;
+    align-items: center;
+    margin-top: 0.5rem;
+    color: white;
+}
+footer .arrow{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+}
+footer .btn-1:hover{
+    background: #f36500;
+    transition-duration: 0.5s at ease;
+}
+@media (min-width: 768px) {
+    footer .btn-1 {
+        margin-top: 2.5rem /* 40px */;
+    }
+}
+footer .sub-heading {
+    color: #f8fafc;
+    font-size: 2rem;
+}
+
+footer .sub-heading span {
+    color: #f97316;
+}
+
+footer .description {
+    font-size: 12px;
+    color: #d4d4d4;
+}
+footer .form-1 {
+    margin-top: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+footer form input {
+    font-size: 1rem;
+    width: 100%;
+    background-color: transparent;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #f97316;
+    color: #ffffff;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+footer form input::placeholder {
+    color: #f97316;
+}
+
+footer form textarea {
+    width: 100%;
+    background-color: transparent;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #f97316;
+    color: #f3f4f6;
+    margin-bottom: 1.5rem;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+footer form textarea::placeholder {
+    color: #f97316;
+}
+
+footer form button {
+    border-width: 1px;
+    border-color: #f97316;
+    color: #f3f4f6;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    border-radius: 0.75rem;
+    transition-duration: 0.5s;
+}
+
+footer form button:hover {
+    background: #f97316;
+    color: white;
+}
+@media (min-width: 768px) {
+    footer .contact {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 4rem /* 64px */;
+        margin-right: 4rem /* 64px */;
+        margin-top: 2.5rem /* 40px */;
+    }
+}
+footer .contact{
+    margin-left: 4rem /* 64px */;
+    margin-top: 1.25rem /* 20px */;
+}
+footer .heading-3{
+    color: #f36500;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+footer ul {
+    font-size: 12px;
+    font-weight: 400;
+    color: white;
+    align-items: center;
+    margin-top: 0.5rem;
+}
+footer li{
+    margin-top: 0.25rem;
+
+}
+footer li:hover{
+    color: #f36500;
+    transition-duration: 0.5s at ease;
+}
+footer p{
+    margin-top: 0.25rem;
+    font-size: 12px;
+    font-weight: 400;
+    margin-top: 0.5rem;
+    color: white;
+}
+footer .input{
+    display: flex;
+    margin-top: 1rem /* 16px */;
+}
+footer input{
+    padding-left: 1.25rem /* 20px */;
+    padding-right: 1.25rem /* 20px */;
+    text-align: left;
+    font-size: 10px;
+    font-weight: 200;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    padding-top: 0.5rem /* 8px */;
+    padding-bottom: 0.5rem /* 8px */;
+    border-top-left-radius: var(--radius);
+    border-bottom-left-radius: var(--radius);
+    left: 100%;
+}
+footer button{
+    background: #f36500;
+    padding-left: 0.5rem /* 8px */;
+    padding-right: 0.5rem /* 8px */;
+    font-size: 12px;
+    text-align: center;
+    font-weight: 500;
+    align-items: center;
+    color: #ffffff;
+}
+.copyright p{
+    font-size: 8px;
+    text-align: center;
+    padding-bottom: 0.5rem /* 8px */;
+    margin-top: 2.5rem /* 40px */;
+    color: #ffffff;
 }
